--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,13 +33,15 @@ classifiers = [
     "Topic :: Internet :: WWW/HTTP",
     "Topic :: Software Development :: Libraries :: Python Modules",
 ]
-packages = [{ include = "" }]
+packages = [{ include = "organization" }]
 include = []
 exclude = []
 
 [tool.poetry.dependencies]
 python = ">=3.8.1"
 django = ">=3.2"
+django-model-utils = {git = "https://github.com/LaunchAt/django-model-utils.git", rev = "master"}
+jsonschema = "^4.17.3"
 
 [tool.poetry.group.dev.dependencies]
 mkdocs = "^1.4.2"
