--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,7 @@ classifiers = [
 ]
 packages = [
     { include = "address" },
-    { include = "media" },
+    { include = "media_managar" },
     { include = "organization" },
 ]
 include = []
